fix(whitespace): removed excess whitespace on index page, and hid title and welcome description within "getting started" div

--- a/source/public_html/css/main.css
+++ b/source/public_html/css/main.css
@@ -52,7 +52,7 @@ body {
 
 /* Page Description */
 #body-container {
-        padding: 10px;
+        padding: 0px 10px 10px 10px;
 }
 
 #body-container h1 {
@@ -63,7 +63,7 @@ body {
 
 /* Listings */
 #listings-container {
-        margin-top: 75px;
+        margin-top: 30px;
 }
 
 #listings-table {
@@ -90,6 +90,7 @@ body {
 
 /* Tips container */
 #tips {
+	margin-bottom: 20px;
         margin-left: 20px;
 }
 
